# COMP4985

./: README.md
COMP4985/: CMakeLists.txt  MyClient  MyServer  Ui.c  Ui.h  client  client.c  client.h  main  main.c  manager.c  manager.h  my_program  protocol.h  server  test.c  test_connection
COMP4985/MyClient.dSYM/Contents/: Info.plist
COMP4985/MyClient.dSYM/Contents/Resources/DWARF/: MyClient
COMP4985/MyClient.dSYM/Contents/Resources/Relocations/aarch64/: MyClient.yml
COMP4985/server.dSYM/Contents/Resources/DWARF/: server
